--- a/styles/base/_views.scss
+++ b/styles/base/_views.scss
@@ -448,7 +448,7 @@
 }
 
 a.views-field-excluded {
-  color: var(--gin-color-disabled-text);
+  color: var(--gin-color-disabled);
 }
 
 .views-filterable-options {
